# Ferr_OS

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
scripts/: run_qemu.sh
src/: gdt.rs  interrupts.rs  main.rs  serial.rs
