[package]
name = "my_os"
version = "0.1.0"
edition = "2021"

[dependencies]
uefi = { version = "0.26.0", features = ["alloc"], default-features = false }
uefi-services = "0.23.0"
x86_64 = { version = "0.14.6", default-features = false, features = ["instructions", "abi_x86_interrupt"] }
lazy_static = { version = "1.4.0", features = ["spin_no_std"], default-features = false }
spin = "0.9.8"
uart_16550 = { version = "0.2.17", default-features = false }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort" 